// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "./proto";
package datacommons.v1;

import "stat.proto";


message TimeSeries {
  repeated datacommons.PointStat series = 1;
  uint32 facet = 2;
}

message EntityObservations {
  string entity = 1;
  repeated datacommons.PointStat points_by_facet = 2;
  repeated TimeSeries series_by_facet = 3;
}

message VariableObservations {
  string variable = 1;
  repeated EntityObservations observations_by_entity = 2;
}

message ObservationsPointRequest {
  string variable = 1;
  string entity = 2;
  string date = 3;
}

message BulkObservationsPointRequest {
  repeated string entities = 1;
  repeated string variables = 2;
  string date = 3;
  bool all_facets = 4;
}

message BulkObservationsPointResponse {
  repeated VariableObservations observations_by_variable = 1;
  // Keyed by the hash of StatMetadata
  map<uint32, datacommons.StatMetadata> facets = 2;
}

message ObservationsSeriesRequest {
  string variable = 1;
  string entity = 2;
}

message ObservationsSeriesResponse {
  repeated datacommons.PointStat observations = 1;
  datacommons.StatMetadata facet = 2;
}

message BulkObservationsSeriesRequest {
  repeated string entities = 1;
  repeated string variables = 2;
  bool all_facets = 3;
}

message BulkObservationsSeriesResponse {
  repeated VariableObservations observations_by_variable = 1;
  map<uint32, datacommons.StatMetadata> facets = 2;
}